YUK-25296: dev task change table styling(1. remove picker row border; 2. fixed error message alignment in dateTime.tag and time.tag, 3. removed stripes from edit enrollment of account; 4. remove row border from program notification; 5 removed stripes from meter-profile-start schedule popup; 6 program widget removed row border)

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -1423,6 +1423,9 @@ hr.dashed,
 
 /* YUKON PICKER */
 .picker-results-table tbody tr {
+    
+    border-bottom: none !important;
+   
     &:focus, &:hover {
         outline: none;
         .focus-indicator { background-color: #ccc; }
